devops/specs/ui-proto/ui-proto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-proto
  namespace: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-proto
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ui-proto
    spec:
      containers:
      - name: ui-proto
        image: eu.gcr.io/the-mesh-254617/ui-proto-design:ceea975-1618650858991 # {"$imagepolicy": "flux-system:ui-proto-design"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
