devops/specs/ui-proto/ui-proto-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-proto
  namespace: ui
  labels:
    app: ui-proto
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app: ui-proto
