devops/specs/ui-proto/ui-proto-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ui-proto
  namespace: ui
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ui-proto-tls
      hosts:
        - 'ui-proto.ui.monstrs.dev'
