devops/specs/ui-proto/ui-proto-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui-proto
  namespace: ui
spec:
  hosts:
    - 'ui-proto.ui.monstrs.dev'
  gateways:
    - ui-proto
  http:
    - route:
        - destination:
            host: ui-proto
            port:
              number: 3000
